--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AngularWorks</title>
-  <base href="thodorikapouranis.github.io/angular_site/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/angular_site/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.8eb651f850a20b170046.css"></head>
 <body>
