--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>AngularWorks</title>
-  <base href="/angular_site/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="angular_site">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.8eb651f850a20b170046.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.1fd9b76218eca8053895.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.c64657d3080d41dd216b.js" type="module"></script><script src="main-es5.c64657d3080d41dd216b.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.1fd9b76218eca8053895.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.5d8bd83b396bbf24cc57.js" type="module"></script><script src="main-es5.5d8bd83b396bbf24cc57.js" nomodule defer></script></body>
 </html>
